# ResumeAnalyzer

./: pyproject.toml
backend/: constants.py  main.py  schema.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
