[project]
name = "resumeanalyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-groq>=1.1.3",
    "langchain-qdrant>=1.1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.49.0",
]
